test/scc_test/stmt/semantic-errors/004.a
004.t:4:9: error: a case statement may only be used within a switch